--- a/.github/workflows/node.js.yml
+++ b/.github/workflows/node.js.yml
@@ -23,6 +23,7 @@ jobs:
     - name: Use Node.js ${{ matrix.node-version }}
       uses: actions/setup-node@v2
       with:
+        path: "EmailSendingService/node_modules"
         node-version: ${{ matrix.node-version }}
         cache: 'npm'
     - run: npm ci
