--- a/.github/workflows/node.js.yml
+++ b/.github/workflows/node.js.yml
@@ -19,13 +19,16 @@ jobs:
         node-version: [14.x]
 
     steps:
-    - uses: actions/checkout@v1
+    - uses: actions/checkout@v2
     - name: Use Node.js ${{ matrix.node-version }}
 
-      uses: actions/setup-node@v2
+      uses: actions/setup-node@v1
       with:
         node-version: ${{ matrix.node-version }}
     - run: npm ci
+      working-directory: MailingService
     - run: npm run build --if-present
+      working-directory: MailingService
     - run: npm test
+      working-directory: MailingService
     - run: HEROKU_API_KEY='ddf4a0e5-9294-4c5f-8820-b51c52fce4f9' heroku run ls --app mailing-service-app
