--- a/.github/workflows/node.js.yml
+++ b/.github/workflows/node.js.yml
@@ -36,4 +36,4 @@ jobs:
     - run: git config --global user.email "chibuikemakpakar@gmail.com"
     - run: git config --global user.name "Chibuikem Akpaka"
     - run: git commit -m "First commit"
-    - run: git push heroku FT-MailService:master
+    - run: git push heroku main
