--- a/.github/workflows/node.js.yml
+++ b/.github/workflows/node.js.yml
@@ -26,6 +26,11 @@ jobs:
       with:
         node-version: ${{ matrix.node-version }}
     - run: npm ci
+      working-directory: MailingService
     - run: npm run build --if-present
     - run: npm test
-    - run: HEROKU_API_KEY='095bb12b-f496-4ad8-b2c7-1b5f33d38116' heroku run git remote add heroku  https://git.heroku.com/mailing-service-app.git --app mailing-service-app
+    - uses: akhileshns/heroku-deploy@v3.12.12 # This is the action
+      with:
+        heroku_api_key: "96db0e8b-311a-418d-a04e-2609d27d24a9"
+        heroku_app_name: "YOUR APP's NAME" #Must be unique in Heroku
+        heroku_email: "YOUR EMAIL"
